feat!: replace isCharging with currentChargingStationId in car interface and schema
