# nodejs/src/models/car.ts
@@ -4,12 +4,12 @@ export interface Car {
     plate: string;
     maxBattery: number; // in kWh
     currentBattery?: number; // in percentage
-    isCharging: boolean;
+    currentChargingStationId?: mongoose.Schema.Types.ObjectId;
 }
 
 export const carSchema = new mongoose.Schema<Car>({
     plate: { type: String, required: true },
     maxBattery: { type: Number, required: true },
     currentBattery: { type: Number },
-    isCharging: { type: Boolean, default: false }
+    currentChargingStationId: { type: mongoose.Schema.Types.ObjectId }
 });
